tuples and sets

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 .idea/inspectionProfiles/profiles_settings.xml
 python.code-workspace
 tasks.txt
+/python3/i_exist/empty.py
+/python3/i_exist/tasty.py
